更新index，添加计算机图形学实验列表主页

--- a/index.html
+++ b/index.html
@@ -22,14 +22,13 @@
                 <h3>Web应用开发</h3>
                 <div class="project-grid">
                     <div class="project-card">
-                        <h4>个人博客系统</h4>
-                        <p class="project-description">基于React和Node.js开发的个人博客平台，支持Markdown编辑和响应式设计。</p>
+                        <h4>Minecraft-CraftGate</h4>
+                        <p class="project-description">一个基于Flask的Minecraft服务器管理面板，旨在简化Minecraft服务器管理任务，特别是处理白名单申请。</p>
                         <div class="project-links">
-                            <a href="https://github.com/yourusername/blog-system" target="_blank" class="btn">查看仓库</a>
-                            <a href="https://demo-link.com" target="_blank" class="btn btn-secondary">在线演示</a>
+                            <a href="https://github.com/SiiNouBeea/Minecraft-CraftGate" target="_blank" class="btn">查看仓库</a>
                         </div>
                         <div class="project-tags">
-                            <span class="tag">团队项目</span>
+                            <span class="tag">Flask</span>
                         </div>
                     </div>
                 </div>
@@ -75,7 +74,8 @@
                         <h4>课程实验</h4>
                         <p class="project-description">计算机图形学课程实验。</p>
                         <div class="project-links">
-                            <a href="https://github.com/" target="_blank" class="btn">查看仓库</a>
+                            <a href="https://github.com/SiiNouBeea/HandsOn/tree/master/%E8%AE%A1%E7%AE%97%E6%9C%BA%E5%9B%BE%E5%BD%A2%E5%AD%A6" target="_blank" class="btn">查看仓库</a>
+                            <a href="HandsOn/计算机图形学/index.html" target="_blank" class="btn">在线展示</a>
                         </div>
                         <div class="project-tags">
                             <span class="tag">实验记录</span>
@@ -83,6 +83,23 @@
                     </div>
                 </div>
             </div>
+            <div class="project-category">
+                <h3>图像处理</h3>
+                <div class="project-grid">
+                    <div class="project-card">
+                        <h4>课程实验</h4>
+                        <p class="project-description">图像处理课程实验。</p>
+                        <div class="project-links">
+                            <a href="https://github.com/SiiNouBeea/HandsOn/tree/master/%E5%9B%BE%E5%83%8F%E5%A4%84%E7%90%86" target="_blank" class="btn">查看仓库</a>
+                        </div>
+                        <div class="project-tags">
+                            <span class="tag">实验记录</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
 
             <!--
             <div class="project-category">
