--- a/HandsOn/计算机图形学/实验1/d.html
+++ b/HandsOn/计算机图形学/实验1/d.html
@@ -30,11 +30,11 @@
         }
     </script>
     <!-- 一组相关的JS库 -->
-    <script type="text/javascript" src="js/common/webgl-utils.js"></script>
-    <script type="text/javascript" src="js/common/initShaders.js"></script>
-    <script type="text/javascript" src="js/common/glMatrix-0.9.5.min.js"></script>
+    <script type="text/javascript" src="common/webgl-utils.js"></script>
+    <script type="text/javascript" src="common/initShaders.js"></script>
+    <script type="text/javascript" src="common/glMatrix-0.9.5.min.js"></script>
     <!-- 绘制三角形的JS代码 -->
-    <script type="text/javascript" src="js/ch01/d.js"></script>
+    <script type="text/javascript" src="js/d.js"></script>
 </head>
 
 <body>
