--- a/HandsOn/计算机图形学/实验1/index.html
+++ b/HandsOn/计算机图形学/实验1/index.html
@@ -136,7 +136,7 @@
 
     <!-- 添加签名 -->
     <div class="signature-container">
-        <a class="task-description", href="SiiNouBeea.github.io" target="_blank">我的个人主页</a>
+        <a class="task-description", href="https://siinoubeea.github.io/" target="_blank">我的个人主页</a>
         <p class="signature">SiNouBeea</p>
     </div>
 
