--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <h4>课程实验</h4>
                         <p class="project-description">计算机图形学课程实验。</p>
                         <div class="project-links">
-                            <a href="https://github.com/SiiNouBeea/HandsOn/tree/master/%E8%AE%A1%E7%AE%97%E6%9C%BA%E5%9B%BE%E5%BD%A2%E5%AD%A6" target="_blank" class="btn">查看仓库</a>
+                            <a href="https://github.com/SiiNouBeea/siinoubeea.github.io/tree/master/HandsOn/%E8%AE%A1%E7%AE%97%E6%9C%BA%E5%9B%BE%E5%BD%A2%E5%AD%A6" target="_blank" class="btn">查看仓库</a>
                             <a href="HandsOn/计算机图形学/index.html" target="_blank" class="btn">在线展示</a>
                         </div>
                         <div class="project-tags">
@@ -90,7 +90,7 @@
                         <h4>课程实验</h4>
                         <p class="project-description">图像处理课程实验。</p>
                         <div class="project-links">
-                            <a href="https://github.com/SiiNouBeea/HandsOn/tree/master/%E5%9B%BE%E5%83%8F%E5%A4%84%E7%90%86" target="_blank" class="btn">查看仓库</a>
+                            <a href="https://github.com/SiiNouBeea/siinoubeea.github.io/tree/master/HandsOn/%E5%9B%BE%E5%83%8F%E5%A4%84%E7%90%86" target="_blank" class="btn">查看仓库</a>
                         </div>
                         <div class="project-tags">
                             <span class="tag">实验记录</span>
