完成实验二

--- a/HandsOn/计算机图形学/index.html
+++ b/HandsOn/计算机图形学/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>计算机图形学实验</title>
+    <link rel="icon" type="image/png" href="../../img/logo.png">
     <link rel="stylesheet" href="../../css/styles_index.css">
     <style>
         /* 为实验页面添加特定样式 */
@@ -128,6 +129,16 @@
                     </div>
                 </div>
             </div>
+            <div class="experiment-list">
+                <div class="experiment-card">
+                    <h3>实验2：WebGL图案绘制</h3>
+                    <p>熟悉WebGL编程环境，了解WebGL程序绘制过程和绘制流水线实现。掌握基本的绘制程序编写方式，能
+够通过程序绘制简单图案。</p>
+                    <div class="project-links">
+                        <a href="实验2/index.html" class="btn">进入实验</a>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
@@ -139,7 +150,7 @@
 
     <footer>
         <div class="container">
-            By <span class="neon-signature">SiiNouBeea</span>
+            <span class="neon-signature">SiiNouBeea</span>
         </div>
     </footer>
 </body>
