--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的项目展示</title>
+    <title>SiiNouBeea - 项目展示</title>
+    <link rel="icon" type="image/png" href="img/logo.png">
     <link rel="stylesheet" href="css/styles_index.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>我的项目展示</h1>
-            <p>欢迎来到我的GitHub项目主页</p>
+            <h1>SiiNouBeea 项目展示</h1>
+            <p>欢迎来到我的项目主页</p>
         </div>
     </header>
 
@@ -151,7 +152,7 @@
 
         <section class="about">
             <h2>关于我</h2>
-            <p>不知道写什么，随便写点什么。有一定AIGC辅助编程技能，喜欢做自己喜欢的小项目。未来还会继续努力。</p>
+            <p>还在学习中，做点自己喜欢的事情，还会继续努力。</p>
             <p>如果您对我的项目感兴趣或有任何问题，请随时通过以下方式联系我：</p>
             <div class="contact-links">
                 <a href="https://github.com/SiiNouBeea" target="_blank">GitHub</a>
@@ -162,7 +163,7 @@
 
     <footer>
         <div class="container">
-            By <span class="neon-signature">SiiNouBeea</span>
+            <span class="neon-signature">SiiNouBeea</span>
         </div>
     </footer>
 </body>
