--- a/HandsOn/计算机图形学/实验1/b.html
+++ b/HandsOn/计算机图形学/实验1/b.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+		<link rel="icon" type="image/png" href="../../../img/logo.png">
 		<title>Chapter 1. First WebGL Demo</title>
 		<!-- 顶点着色器和片元着色器代码 -->
 		<script id="vertex-shader" type="x-shader/x-vertex">
