--- a/HandsOn/计算机图形学/实验2/b.html
+++ b/HandsOn/计算机图形学/实验2/b.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
 <meta charset="utf-8">
+  <link rel="icon" type="image/png" href="../../../img/logo.png">
 <title>Sierpinski Gasket 2D/3D</title>
 <style>
 body{text-align:center;font-family:Arial}
