--- a/HandsOn/计算机图形学/实验2/e.html
+++ b/HandsOn/计算机图形学/实验2/e.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
 <meta charset="utf-8">
+    <link rel="icon" type="image/png" href="../../../img/logo.png">
 <title>Triangle Tessellation – Rotation & Level</title>
 <style>
 body{text-align:center;font-family:Arial}
