设计实验页面样式

--- a/HandsOn/计算机图形学/index.html
+++ b/HandsOn/计算机图形学/index.html
@@ -15,11 +15,12 @@
         </div>
     </header>
 
-    <main class="task-list">
+    <main class="container">
         <a href="../../index.html" class="back-link">← 返回主页</a>
 
         <section class="projects">
             <h2>实验列表</h2>
+
             <div class="section-title">
                 <div class="task-item">
                     <h3 class="section-title">实验1：基础图形绘制</h3>
@@ -29,16 +30,18 @@
                     </div>
                 </div>
             </div>
+
             <div class="section-title">
                 <div class="task-item">
                     <h3 class="section-title">实验2：WebGL图案绘制</h3>
                     <p>熟悉WebGL编程环境，了解WebGL程序绘制过程和绘制流水线实现。掌握基本的绘制程序编写方式，能
 够通过程序绘制简单图案。</p>
-                    <div>
+                    <div class="project-links">
                         <a href="实验2/index.html" class="demo-button">进入实验</a>
                     </div>
                 </div>
             </div>
+
         </section>
     </main>
 
