--- a/HandsOn/计算机图形学/实验1/index.html
+++ b/HandsOn/计算机图形学/实验1/index.html
@@ -10,11 +10,12 @@
     <header class="experiments-header">
         <div class="container">
             <h1>第一次实验作业</h1>
-            <a href="../index.html" class="back-link">← 返回实验列表</a>
+            <span>通过运行第一个WebGL程序，绘制纯色三角形，认识WebGL程序的运行机制，熟悉计算机图形学的基本概念，掌握配置搭建WebGL开发环境的基础知识，并能在此基础上通过修改代码实现对指定图形的显示。</span>
         </div>
     </header>
     
     <div class="task-list">
+        <a href="../index.html" class="back-link">← 返回实验列表</a>
         <div class="task-item">
             <a href="a.html">任务 A</a>
             <div class="task-description">修改三角形的显示颜色，比如改成蓝色或绿色</div>
