--- a/HandsOn/计算机图形学/实验2/e.html
+++ b/HandsOn/计算机图形学/实验2/e.html
@@ -2,14 +2,9 @@
 <html lang="zh-CN">
 <head>
 <meta charset="utf-8">
-    <link rel="icon" type="image/png" href="../../../img/logo.png">
+<link rel="icon" type="image/png" href="../../../img/logo.png">
+<link rel="stylesheet" href="../../../css/styles_experiments.css">
 <title>Triangle Tessellation – Rotation & Level</title>
-<style>
-body{text-align:center;font-family:Arial}
-canvas{border:1px solid #999;display:block;margin:10px auto}
-select,input,button{font-size:16px;margin:4px}
-label{font-weight:bold}
-</style>
 
 <!-- ---------- 着色器 ---------- -->
 <script id="vertex-shader" type="x-shader/x-vertex">#version 300 es
@@ -33,26 +28,47 @@ void main(){ fColor = vec4(1.0, 0.0, 0.0, 1.0); }
 </head>
 
 <body>
-<h2>Triangle Tessellation</h2>
-<canvas id="gl-canvas" width="600" height="600"></canvas>
+<div class="experiment-page">
+    <h1 class="experiment-title">实验要求2：基于Sierpinski Gasket的扩展图案绘制</h1>
 
-<div>
-  细分层次：
-  <input type="range" id="level-slider" min="0" max="7" value="0"
-         oninput="updateLevel()">
-  <span id="levShow">0</span>
+        <div class="experiment-description">
+                <div class="task-description">任务 C - 完成不同层次剖分效果的绘制，这里的绘制采用线框模式。</div>
+                <div class="task-description">任务 D - 任务c中剖分后的三角形添加旋转效果。假设没有旋转时，图中绘制的各个点的坐标分别为(x,y,z)，因只涉及二维平面，故有z=0。当图案在xoy平面上绕原点旋转时，即绕z轴逆时针旋转角度θ时，新的坐标(x',y',z')为x'=x*cos(θ)-y*sin(θ), y'=x*sin(θ)+y*cos(θ)。</div>
+                <div class="task-description">任务 E - 在任务d中，如果旋转角度根据点到原点的距离d设定，即有x'=x*cos(d*θ)-y*sin(d*θ), y'=x*sin(d*θ)+y*cos(d*θ)，其中，d=sqrt((x^2+y^2))。</div>
+        </div>
 
-  旋转角度：
-  <input type="range" id="angle-slider" min="0" max="360" value="60"
-         oninput="updateAngle()">
-  <span id="angShow">60°</span>
-  
-  扭转强度：
-      <input type="range" id="twist-slider" min="0" max="360" value="0" oninput="updateTwist()">
-      <span id="twistShow">0°</span><br>
+    <div class="canvas-container">
+        <h2 style="color: #ffffff; margin-bottom: 15px;">Triangle Tessellation</h2>
+        <canvas id="gl-canvas" class="experiment-canvas" width="600" height="600"></canvas>
+    </div>
+
+    <div style="background: rgba(255, 255, 255, 0.08); backdrop-filter: blur(10px); border-radius: 12px; padding: 20px; margin: 20px 0; max-width: 600px;">
+        <div>
+            细分层次：
+            <input type="range" id="level-slider" min="0" max="7" value="0"
+                   oninput="updateLevel()" style="vertical-align: middle;">
+            <span id="levShow">0</span>
+        </div>
+
+        <div>
+            旋转角度：
+            <input type="range" id="angle-slider" min="0" max="360" value="60"
+                   oninput="updateAngle()" style="vertical-align: middle;">
+            <span id="angShow">60°</span>
+        </div>
+
+        <div>
+            扭转强度：
+            <input type="range" id="twist-slider" min="0" max="360" value="0"
+                   oninput="updateTwist()" style="vertical-align: middle;">
+            <span id="twistShow">0°</span>
+        </div>
+    </div>
+
+    <a href="index.html" class="experiment-back-button">返回上一页</a>
 </div>
-<div style="text-align: center; margin-top: 20px;">
-    <div><a href="index.html" style="color: #4da6ff; text-decoration: none;">回到主页</a></div>
-</div>
+    <div class="signature-container">
+        <p class="neon-signature">SiNouBeea</p>
+    </div>
 </body>
 </html>
