--- a/HandsOn/计算机图形学/实验2/index.html
+++ b/HandsOn/计算机图形学/实验2/index.html
@@ -10,11 +10,12 @@
     <header class="experiments-header">
         <div class="container">
             <h1>第一次实验作业</h1>
-            <a href="../index.html" class="back-link">← 返回实验列表</a>
+            <span>熟悉WebGL编程环境，了解WebGL程序绘制过程和绘制流水线实现。掌握基本的绘制程序编写方式，能够通过程序绘制简单图案</span>
         </div>
     </header>
 
     <div class="task-list">
+        <a href="../index.html" class="back-link">← 返回实验列表</a>
         <h2 class="section-title">实验要求1：Sierpinski Gasket图案绘制</h2>
 
         <div class="task-item">
@@ -49,7 +50,6 @@
         <a href="e.html" class="demo-button">演示</a>
     </div>
 
-    <!-- 添加签名 -->
     <div class="signature-container">
         <p class="neon-signature">SiNouBeea</p>
     </div>
