--- a/HandsOn/计算机图形学/实验1/e.html
+++ b/HandsOn/计算机图形学/实验1/e.html
@@ -1,40 +1,55 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-		<link rel="icon" type="image/png" href="../../../img/logo.png">
-		<title>Chatper 1. First WebGL Demo</title>
-		<!-- 顶点着色器和片元着色器代码 -->
-		<script id="vertex-shader" type="x-shader/x-vertex">
-			#version 300 es
-			in vec4 aPosition;
-			in vec4 aColor;
-			out vec4 vColor;
-			void main(){
-				gl_Position = aPosition;
-				vColor = aColor;
-			}
-		</script>
-		<script id="fragment-shader" type="x-shader/x-fragment">
-			#version 300 es
-			precision mediump float;
-			in vec4 vColor;
-			out vec4 fColor;
-			void main(){
-				fColor = vColor;
-			}
-		</script>
-		<!-- 一组相关的JS库 -->
-		<script type="text/javascript" src="common/webgl-utils.js"></script>
-		<script type="text/javascript" src="common/initShaders.js"></script>
-		<script type="text/javascript" src="common/glMatrix-0.9.5.min.js"></script>
-		<!-- 绘制三角形的JS代码 -->
-		<script type="text/javascript" src="js/e.js"></script>
-	</head>
-	<body>
-		<canvas id="triangle-canvas" style="border:none;" width="500" height="500"></canvas>
-		<div style="text-align: center; margin-top: 20px;">
-			<div><a href="index.html" style="color: #4da6ff; text-decoration: none;">回到主页</a></div>
-		</div>
-	</body>
+<head>
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="../../../img/logo.png">
+    <link rel="stylesheet" href="../../../css/styles_experiments.css">
+    <title>Chatper 1. First WebGL Demo</title>
+    <!-- 顶点着色器和片元着色器代码 -->
+    <script id="vertex-shader" type="x-shader/x-vertex">
+        #version 300 es
+        in vec4 aPosition;
+        in vec4 aColor;
+        out vec4 vColor;
+        void main(){
+            gl_Position = aPosition;
+            vColor = aColor;
+        }
+    </script>
+    <script id="fragment-shader" type="x-shader/x-fragment">
+        #version 300 es
+        precision mediump float;
+        in vec4 vColor;
+        out vec4 fColor;
+        void main(){
+            fColor = vColor;
+        }
+    </script>
+    <!-- 一组相关的JS库 -->
+    <script type="text/javascript" src="common/webgl-utils.js"></script>
+    <script type="text/javascript" src="common/initShaders.js"></script>
+    <script type="text/javascript" src="common/glMatrix-0.9.5.min.js"></script>
+    <!-- 绘制三角形的JS代码 -->
+    <script type="text/javascript" src="js/e.js"></script>
+</head>
+<body>
+    <div class="experiment-page">
+        <h1 class="experiment-title">任务 E - 绘制大小可变的三角形</h1>
+
+        <div class="experiment-description">
+            绘制三角形，三角形大小可变
+        </div>
+
+        <div class="canvas-container">
+            <canvas id="triangle-canvas" class="experiment-canvas" width="500" height="500"></canvas>
+        </div>
+
+        <a href="index.html" class="experiment-back-button">返回上一页</a>
+    </div>
+
+    <div class="signature-container">
+        <p class="neon-signature">SiNouBeea</p>
+    </div>
+</body>
 </html>
