--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                 <h3>Web应用开发</h3>
                 <div class="project-grid">
                     <div class="project-card">
-                        <h4>Minecraft-CraftGate</h4>
+                        <h4>Minecraft-BeeaNexus-Web</h4>
                         <p class="project-description">一个基于Flask的Minecraft服务器管理面板，旨在简化Minecraft服务器管理任务，特别是处理白名单申请。</p>
                         <div class="project-links">
-                            <a href="https://github.com/SiiNouBeea/Minecraft-CraftGate" target="_blank" class="btn">查看仓库</a>
+                            <a href="https://github.com/SiiNouBeea/Minecraft-BeeaNexus-Web" target="_blank" class="btn">查看仓库</a>
                         </div>
                         <div class="project-tags">
                             <span class="tag">Flask</span>
