--- a/index.html
+++ b/index.html
@@ -42,14 +42,13 @@
                 <h3>软件工程</h3>
                 <div class="project-grid">
                     <div class="project-card">
-                        <h4>课程大作业</h4>
-                        <p class="project-description">还在路上</p>
+                        <h4>Minecraft-BeeaNexus</h4>
+                        <p class="project-description">一个专为Minecraft服务器打造的客户端-服务端管理应用。</p>
                         <div class="project-links">
-
+                            <a href="https://github.com/SiiNouBeea/BeeaNexus" target="_blank" class="btn">查看仓库</a>
                         </div>
                         <div class="project-tags">
-                            <span class="tag">团队项目</span>
-
+                            <span class="tag">桌面应用系统</span>
                         </div>
                     </div>
                 </div>
