feat(graphics): 实现实验3二维图形变换功能- 添加实验3完整代码，支持平移、旋转、缩放变换- 新增着色器实现顶点变换和颜色渲染- 实现多种基础图形（正方形、三角形、圆形） - 添加交互控制面板，支持实时参数调整- 支持自动旋转动画及方向控制- 完善实验页面描述和返回导航功能 - 更新实验主页索引，添加实验3入口 - 优化控制面板样式，提升用户体验 - 补充实验2页面标题和头部信息完善 - 整理实验2代码注释，提高可读性

--- a/HandsOn/计算机图形学/实验1/index.html
+++ b/HandsOn/计算机图形学/实验1/index.html
@@ -2,9 +2,10 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="image/png" href="../../../img/logo.png">
-    <link rel="stylesheet" href="../../../css/styles_experiments.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>计算机图形学实验 - ①</title>
+    <link rel="stylesheet" href="../../../css/styles_experiments.css">
+    <link rel="icon" type="image/png" href="../../../img/logo.png">
 </head>
 <body>
     <header class="experiments-header">
