--- a/HandsOn/计算机图形学/实验2/index.html
+++ b/HandsOn/计算机图形学/实验2/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>计算机图形学实验 - ②</title>
     <link rel="stylesheet" href="../../../css/styles_experiments.css">
     <link rel="icon" type="image/png" href="../../../img/logo.png">
 </head>
 <body>
     <header class="experiments-header">
         <div class="container">
-            <h1>第一次实验作业</h1>
+            <h1>第二次实验作业</h1>
             <span>熟悉WebGL编程环境，了解WebGL程序绘制过程和绘制流水线实现。掌握基本的绘制程序编写方式，能够通过程序绘制简单图案</span>
         </div>
     </header>
