--- a/HandsOn/计算机图形学/index.html
+++ b/HandsOn/计算机图形学/index.html
@@ -35,9 +35,20 @@
                 <div class="task-item">
                     <h3 class="section-title">实验2：WebGL图案绘制</h3>
                     <p>熟悉WebGL编程环境，了解WebGL程序绘制过程和绘制流水线实现。掌握基本的绘制程序编写方式，能
-够通过程序绘制简单图案。</p>
+                        够通过程序绘制简单图案。</p>
                     <div class="project-links">
                         <a href="实验2/index.html" class="demo-button">进入实验</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="section-title">
+                <div class="task-item">
+                    <h3 class="section-title">实验3：二维图形变换</h3>
+                    <p>熟悉二维图形变换，包括基本变换的类型，缩放、平移、旋转，能够区别刚体和非刚体变换。能够了解常见变换的齐次矩阵表示，
+                        并能应用矩阵计算相应点在空间中经过单一变换后的结果。</p>
+                    <div class="project-links">
+                        <a href="实验3/index.html" class="demo-button">进入实验</a>
                     </div>
                 </div>
             </div>
