feat(graphic-experiments): 添加实验日期显示并创建二级导航页模板
- 在实验1、实验2、实验3的页面中添加了实验日期显示
- 创建了计算机图形学实验的二级导航页模板文件
- 为实验列表页中的各个实验项添加了对应的日期标签
- 设置了日期文本的样式，使用浅蓝色和灰色以区分主标题
- 模板中包含返回实验列表链接和签名区域
- 所有日期格式统一为 YYYY-MM-DD 样式

--- a/HandsOn/计算机图形学/index.html
+++ b/HandsOn/计算机图形学/index.html
@@ -24,6 +24,7 @@
             <div class="section-title">
                 <div class="task-item">
                     <h3 class="section-title">实验1：基础图形绘制</h3>
+                    <span style="color: #b0b0b0; font-size: 0.9rem; white-space: nowrap;">2025-09-23</span>
                     <p>学习使用WebGL绘制基本图形，包括三角形、四边形等，并掌握颜色设置方法。</p>
                     <div class="project-links">
                         <a href="实验1/index.html" class="demo-button">进入实验</a>
@@ -34,6 +35,7 @@
             <div class="section-title">
                 <div class="task-item">
                     <h3 class="section-title">实验2：WebGL图案绘制</h3>
+                    <span style="color: #b0b0b0; font-size: 0.9rem; white-space: nowrap;">2025-09-28</span>
                     <p>熟悉WebGL编程环境，了解WebGL程序绘制过程和绘制流水线实现。掌握基本的绘制程序编写方式，能
                         够通过程序绘制简单图案。</p>
                     <div class="project-links">
@@ -45,6 +47,7 @@
             <div class="section-title">
                 <div class="task-item">
                     <h3 class="section-title">实验3：二维图形变换</h3>
+                    <span style="color: #b0b0b0; font-size: 0.9rem; white-space: nowrap;">2025-09-30</span>
                     <p>熟悉二维图形变换，包括基本变换的类型，缩放、平移、旋转，能够区别刚体和非刚体变换。能够了解常见变换的齐次矩阵表示，
                         并能应用矩阵计算相应点在空间中经过单一变换后的结果。</p>
                     <div class="project-links">
