--- a/HandsOn/计算机图形学/实验1/index.html
+++ b/HandsOn/计算机图形学/实验1/index.html
@@ -11,6 +11,7 @@
     <header class="experiments-header">
         <div class="container">
             <h1>第一次实验作业</h1>
+            <p style="color: #66ccff; font-size: 0.9rem; white-space: nowrap;">2025-09-23</p>
             <span>通过运行第一个WebGL程序，绘制纯色三角形，认识WebGL程序的运行机制，熟悉计算机图形学的基本概念，掌握配置搭建WebGL开发环境的基础知识，并能在此基础上通过修改代码实现对指定图形的显示。</span>
         </div>
     </header>
