--- a/HandsOn/计算机图形学/实验3/index.html
+++ b/HandsOn/计算机图形学/实验3/index.html
@@ -11,6 +11,7 @@
         <header class="experiments-header">
             <div class="container">
                 <h1>第三次实验作业</h1>
+                <p style="color: #66ccff; font-size: 0.9rem; white-space: nowrap;">2025-09-30</p>
                 <span>熟悉二维图形变换，包括基本变换的类型，缩放、平移、旋转，能够区别刚体和非刚体变换。能够了解常见变换的齐次矩阵表示，并能应用矩阵计算相应点在空间中经过单一变换后的结果</span>
             </div>
         </header>
