--- a/HandsOn/计算机图形学/实验2/index.html
+++ b/HandsOn/计算机图形学/实验2/index.html
@@ -11,6 +11,7 @@
     <header class="experiments-header">
         <div class="container">
             <h1>第二次实验作业</h1>
+            <p style="color: #66ccff; font-size: 0.9rem; white-space: nowrap;">2025-09-28</p>
             <span>熟悉WebGL编程环境，了解WebGL程序绘制过程和绘制流水线实现。掌握基本的绘制程序编写方式，能够通过程序绘制简单图案</span>
         </div>
     </header>
