feat(graphics): 添加实验4图形变换功能
- 实现二维/三维图形变换实验模块
- 添加正三角形、正方形、立方体、圆形四种基础图形
- 支持图形的平移、旋转、缩放等基本变换操作
- 实现各图形的自动动画效果：三角形缩放、正方形旋转、立方体多轴旋转、圆形随机移动
- 添加图形选中状态和独立参数调节功能- 支持通过鼠标点击画布放置图形和交互控制- 实现属性面板可拖拽功能- 添加图形颜色自定义和删除功能
- 完善图形边界检测和反弹逻辑
- 优化图形旋转中心为自身中心点而非原点

--- a/HandsOn/计算机图形学/index.html
+++ b/HandsOn/计算机图形学/index.html
@@ -56,6 +56,19 @@
                 </div>
             </div>
 
+            <div class="section-title">
+                <div class="task-item">
+                    <h3 class="section-title">实验4：二维/三维图形变换</h3>
+                    <span style="color: #b0b0b0; font-size: 0.9rem; white-space: nowrap;">2025-10-14</span>
+                    <p>熟悉二维和三维图形变换，包括基本变换的类型，缩放、平移、旋转，能够区别刚体和非刚体变换。能够了解常见变换的齐次矩阵表示，
+                        并能应用矩阵计算相应点在空间中经过多次复合变换后的结果。
+                        能够了解用鼠标模拟跟踪球实现的机制，并能利用鼠标模拟交互控制三维空间中对象的变换操作</p>
+                    <div class="project-links">
+                        <a href="实验4/index.html" class="demo-button">进入实验</a>
+                    </div>
+                </div>
+            </div>
+
         </section>
     </main>
 
