feat(snake-game): 添加贪吃蛇小游戏并优化界面- 在主页添加贪吃蛇游戏项目卡片 - 实现完整的游戏逻辑和界面设计- 添加响应式布局和移动端适配 - 增加返回主页导航按钮 - 完善游戏结束弹窗和分数显示 - 添加页头和页脚样式 -优化游戏画布和控制按钮样式
refactor(face-recognition): 重构人脸识别模块并拆分功能

- 将原作业3.py拆分为两个独立模块
- 作业3-1.py实现优化的人脸比对功能
- 作业3-2.py实现图形化人脸检测工具
- 增强ORB特征提取器参数配置
- 添加直方图均衡化预处理
- 实现批量图像匹配度矩阵生成
- 添加图形化界面和文件保存功能

--- a/index.html
+++ b/index.html
@@ -123,8 +123,19 @@
         <!-- 其他项目 -->
         <section class="projects">
             <h2>其他项目</h2>
+
             <div class="project-category">
-                <h4>还在路上</h4>
+                <h3>小游戏联系</h3>
+                <div class="project-card">
+                    <h4>贪吃蛇游戏</h4>
+                    <p class="project-description">经典的贪吃蛇游戏实现，具有加速功能和特殊道具。</p>
+                    <div class="project-links">
+                        <a href="snake_game.html" target="_blank" class="btn">开始游戏</a>
+                    </div>
+                    <div class="project-tags">
+                        <span class="tag">小游戏</span>
+                    </div>
+                </div>
             </div>
 
             <!--
