--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
 
             <div class="project-category">
                 <h3>计算机图形学</h3>
-
                 <div class="project-grid">
                     <div class="project-card">
                         <h4>课程大作业</h4>
@@ -73,7 +72,7 @@
                         <h4>课程实验</h4>
                         <p class="project-description">计算机图形学课程实验。</p>
                         <div class="project-links">
-                            <a href="https://github.com/SiiNouBeea/siinoubeea.github.io/tree/master/HandsOn/%E8%AE%A1%E7%AE%97%E6%9C%BA%E5%9B%BE%E5%BD%A2%E5%AD%A6" target="_blank" class="btn">查看仓库</a>
+                            <a href="https://github.com/SiiNouBeea/siinoubeea.github.io/tree/master/HandsOn/计算机图形学" target="_blank" class="btn">查看仓库</a>
                             <a href="HandsOn/计算机图形学/index.html" target="_blank" class="btn">在线展示</a>
                         </div>
                         <div class="project-tags">
@@ -82,14 +81,15 @@
                     </div>
                 </div>
             </div>
+
             <div class="project-category">
-                <h3>图像处理</h3>
+                <h3>图像处理与机器学习</h3>
                 <div class="project-grid">
                     <div class="project-card">
                         <h4>课程实验</h4>
                         <p class="project-description">图像处理课程实验。</p>
                         <div class="project-links">
-                            <a href="https://github.com/SiiNouBeea/siinoubeea.github.io/tree/master/HandsOn/%E5%9B%BE%E5%83%8F%E5%A4%84%E7%90%86" target="_blank" class="btn">查看仓库</a>
+                            <a href="https://github.com/SiiNouBeea/siinoubeea.github.io/tree/master/HandsOn/图像处理" target="_blank" class="btn">查看仓库</a>
                         </div>
                         <div class="project-tags">
                             <span class="tag">实验记录</span>
@@ -98,7 +98,23 @@
                 </div>
             </div>
 
-
+            <h2>课程学习项目</h2>
+            <div class="project-category">
+                <h3>医学信息系统</h3>
+                <div class="project-grid">
+                    <div class="project-card">
+                        <h4>医学影像浏览器</h4>
+                        <p class="project-description">在浏览器中对医学影像进行浏览以及简单的标记操作。</p>
+                        <div class="project-links">
+                            <a href="https://github.com/SiiNouBeea/siinoubeea.github.io/tree/master/HandsOn/医学信息系统" target="_blank" class="btn">查看仓库</a>
+                            <a href="HandsOn/医学信息系统/medicalImageViewer.html" target="_blank" class="btn">在线展示</a>
+                        </div>
+                        <div class="project-tags">
+                            <span class="tag">桌面应用系统</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <!--
             <div class="project-category">
