feat(课程设计): 更新医学信息系统标签
- 将"桌面应用系统"标签更改为"课程设计"
-保持在线展示功能不变- 维护原有的项目结构和样式
- 确保标签更新后的显示效果一致- 保留原有的超链接和按钮功能
- 维护页面整体布局和响应式设计

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                             <a href="HandsOn/医学信息系统/medicalImageViewer.html" target="_blank" class="btn">在线展示</a>
                         </div>
                         <div class="project-tags">
-                            <span class="tag">桌面应用系统</span>
+                            <span class="tag">课程设计</span>
                         </div>
                     </div>
                 </div>
