--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         <p class="project-description">在浏览器中对医学影像进行浏览以及简单的标记操作。</p>
                         <div class="project-links">
                             <a href="https://github.com/SiiNouBeea/siinoubeea.github.io/tree/master/HandsOn/医学信息系统" target="_blank" class="btn">查看仓库</a>
-                            <a href="HandsOn/医学信息系统/medicalImageViewer.html" target="_blank" class="btn">在线展示</a>
+                            <a href="HandsOn/医学信息系统/index.html" target="_blank" class="btn">在线展示</a>
                         </div>
                         <div class="project-tags">
                             <span class="tag">课程设计</span>
@@ -141,7 +141,7 @@
             <h2>其他项目</h2>
 
             <div class="project-category">
-                <h3>小游戏联系</h3>
+                <h3>小游戏</h3>
                 <div class="project-card">
                     <h4>贪吃蛇游戏</h4>
                     <p class="project-description">经典的贪吃蛇游戏实现，具有加速功能和特殊道具。</p>
@@ -150,6 +150,20 @@
                     </div>
                     <div class="project-tags">
                         <span class="tag">小游戏</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project-category">
+                <h3>奇怪小工具</h3>
+                <div class="project-card">
+                    <h4>图像浏览器</h4>
+                    <p class="project-description">可以浏览图像，添加图像标注</p>
+                    <div class="project-links">
+                        <a href="HandsOn/医学信息系统/ImageViewer.html" target="_blank" class="btn">在线展示</a>
+                    </div>
+                    <div class="project-tags">
+                        <span class="tag">看图</span>
                     </div>
                 </div>
             </div>
