--- a/HandsOn/医学信息系统/ImageViewer.html
+++ b/HandsOn/医学信息系统/ImageViewer.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>医学影像浏览器</title>
+    <title>图像浏览器</title>
     <link rel="icon" type="image/png" href="../../img/logo.png">
     <link rel="stylesheet" href="css/ImageViewer.css">
 </head>
 <body>
     <div class="container">
-        <h1>医学影像浏览器</h1>
+        <h1>图像浏览器</h1>
         <a href="../../index.html" class="back-link">← 返回主页</a>
 
         <!-- 控制面板 -->
