feat(medical-system): 删除医学影像浏览器相关文件
- 移除了 ImageViewer.html 页面文件
- 删除了对应的 CSS 样式文件
- 移除了 JavaScript 功能实现文件- 清理了医学影像浏览模块的完整代码

--- a/HandsOn/小组件/snake_game.html
+++ b/HandsOn/小组件/snake_game.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>贪吃蛇游戏 - SiiNouBeea项目展示</title>
+    <link rel="icon" type="image/png" href="../../img/logo.png">
+    <title>贪吃蛇游戏 - SiiNouBeea</title>
     <style>
         /* 重置默认样式 */
         * {
@@ -194,7 +195,7 @@
         <div class="container">
             <div class="game-wrapper">
                 <!-- 返回主页按钮 -->
-                <a href="index.html" class="nav-btn">← 返回主页</a>
+                <a href="../../index.html" class="nav-btn">← 返回主页</a>
 
                 <!-- 分数显示 -->
                 <div class="score-display">当前分数：<span id="nowScore">0</span></div>
