--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
                 <div class="project-grid">
                     <div class="project-card">
                         <h4>医学影像浏览器</h4>
-                        <p class="project-description">在浏览器中对医学影像进行浏览以及简单的标记操作。</p>
+                        <p class="project-description">在浏览器中对DICOM影像进行基础操作。</p>
                         <div class="project-links">
                             <a href="https://github.com/SiiNouBeea/siinoubeea.github.io/tree/master/HandsOn/医学信息系统" target="_blank" class="btn">查看仓库</a>
                             <a href="HandsOn/医学信息系统/index.html" target="_blank" class="btn">在线展示</a>
                         </div>
                         <div class="project-tags">
-                            <span class="tag">课程设计</span>
+                            <span class="tag">课程设计</span> <span class="tag">DICOM</span>
                         </div>
                     </div>
                 </div>
@@ -157,13 +157,13 @@
             <div class="project-category">
                 <h3>奇怪小工具</h3>
                 <div class="project-card">
-                    <h4>图像浏览器</h4>
-                    <p class="project-description">可以浏览图像，添加图像标注</p>
+                    <h4>Markdown浏览器</h4>
+                    <p class="project-description">在网页上浏览Markdown文件。</p>
                     <div class="project-links">
-                        <a href="HandsOn/医学信息系统/ImageViewer.html" target="_blank" class="btn">在线展示</a>
+                        <a href="HandsOn/小组件/MDV.html" target="_blank" class="btn">立即进入</a>
                     </div>
                     <div class="project-tags">
-                        <span class="tag">看图</span>
+                        <span class="tag">Markdown</span> <span class="tag">在线</span>
                     </div>
                 </div>
             </div>
